--- a/pages/character.html
+++ b/pages/character.html
@@ -19,7 +19,7 @@
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
-					<h5><a href="#adjectiveAdjectiveName">Adjective Adjective Name</a></h5>
+					<h5><a href="#chameleon">Chameleon</a></h5>
 				</li>
 				<li>
 					<h5><a href="#characterPanel">Character Panel</a></h5>
@@ -36,12 +36,12 @@
 <hr class="thick-hr">
 
 <div class="m-5">
-	<!-- ---------- ADJECTIVE ADJECTIVE NAME ---------- -->
-	<div class="game-box p-2" id="adjectiveAdjectiveName">
-		<h3>Adjective Adjective Name</h3>
+	<!-- ---------- CHAMELEON ---------- -->
+	<div class="game-box p-2" id="chameleon">
+		<h3>Chameleon</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - 
+<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chamelon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few shorts scenes, a new player from the back line become the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual(second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="excercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -64,7 +64,7 @@
 	<div class="game-box p-2" id="characterMatching">
 		<h3>Character Matching</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -76,7 +76,7 @@
 	<div class="game-box p-2" id="taxi">
 		<h3>Taxi</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
