--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -22,9 +22,6 @@
 					<h5><a href="#60SecondsOfSilence">60 Seconds of Silence</a></h5>
 				</li>
 				<li>
-					<h5><a href="#adjectiveAdjectiveName">Adjective Adjective Name</a></h5>
-				</li>
-				<li>
 					<h5><a href="#aRealReason">A Real Reason</a></h5>
 				</li>
 				<li>
@@ -43,9 +40,6 @@
 					<h5><a href="#badRap">Bad Rap</a></h5>
 				</li>
 				<li>
-					<h5><a href="#band">Band</a></h5>
-				</li>
-				<li>
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
 				</li>
 				<li>
@@ -56,6 +50,9 @@
 				</li>
 				<li>
 					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
+				</li>
+				<li>
+					<h5><a href="#chameleon">Chameleon</a></h5>
 				</li>
 				<li>
 					<h5><a href="#characterPanel">Character Panel</a></h5>
@@ -90,23 +87,11 @@
 
 	<hr class="thick-hr">
 
-	<!-- ---------- ADJECTIVE ADJECTIVE NAME ---------- -->
-	<div class="game-box p-2" id="adjectiveAdjectiveName">
-		<h3>Adjective Adjective Name</h3>
-		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- A REAL REASON ---------- -->
 	<div class="game-box p-2" id="aRealReason">
 		<h3>A Real Reason</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>Two players take the stage.</li><li>Player 1 makes an accusation against player 2</li><li>Player 2 must then give a real, logical reason why they would have done that thing.</li><li>Player 2 must accept without argument that they did the thing of which they are accused.</li><li>This exercise is part of a series try <a href='exercises.html#supervillain'>Supervillain / Mastermind</a> then <a href='exercises.html#ownIt'>Own It</a> before this exercise.</li></ul><hr><p><strong>Example:</strong><br><ul><li>Player 1: Sir... We found these knives and excessive liquids in your luggage. Were you planning on taking these onto the plane?</li><li>Player 2 as supervillain: Yes! So I can take over the skies!</li><li>Player 2 owning it: Yes I plan on bullying passengers up there!</li><li>Player 2 giving a real reason: You know, I was just hoping you wouldn't check. I thought I could get away with it. I think TSA policies are kinda dumb. I'm not planning anything bad, I just don't want to follow your rules.</li></ul><p>The real reason response is rich, specific and truthful. It's the best way to respond to strange endowments.</p><hr><p><strong>Source:</strong><ul><li>How to be the Greatest Improviser on Earth by Will Hines - p. 58</li></ul><hr>		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -118,7 +103,7 @@
 	<div class="game-box p-2" id="adGame">
 		<h3>Ad Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -130,7 +115,7 @@
 	<div class="game-box p-2" id="acapellaHarmonies">
 		<h3>Acapella Harmonies</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -142,7 +127,7 @@
 	<div class="game-box p-2" id="alienTigerCow">
 		<h3>Alien Tiger Cow</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -154,7 +139,7 @@
 	<div class="game-box p-2" id="alphabetGame">
 		<h3>Alphabet Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -166,20 +151,8 @@
 	<div class="game-box p-2" id="badRap">
 		<h3>Bad Rap</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BAND ---------- -->
-	<div class="game-box p-2" id="band">
-		<h3>Band</h3>
-		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -190,7 +163,7 @@
 	<div class="game-box p-2" id="beastieBoys">
 		<h3>Beastie Boys</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -202,7 +175,7 @@
 	<div class="game-box p-2" id="beastieRap">
 		<h3>Beastie Rap</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -214,7 +187,7 @@
 	<div class="game-box p-2" id="bigBooty">
 		<h3>Big Booty</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -226,8 +199,20 @@
 	<div class="game-box p-2" id="bubsyBerkeley">
 		<h3>Bubsy Berkeley</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
+		<hr>
+		<h6><a href="#top">Back to Top</a></h6>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- CHAMELEON ---------- -->
+	<div class="game-box p-2" id="chameleon">
+		<h3>Chameleon</h3>
+		<hr>
+<p><strong>Description:</strong><br><ul><li>Several improvisers from a back line.</li><li>One player steps forward, they will be the chameleon.</li><li>One at a time players step off the back line to initiate a short scene with the chameleon.</li><li>They should enter with a strong character choice.</li><li>The chamelon has to match their character choice and the two do a peas in a pod scene.</li><li>After a few shorts scenes, a new player from the back line become the chameleon.</li></ul><hr><p><strong>Tips:</strong><ul><li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li></ul><hr><p><strong>Source:</strong><br><ul><li>The Upright Citizens Brigade Comedy Improv Manual(second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li></ul><hr>		<h6>Tags</h6>
+		<a href="character.html">Character</a> - <a href="excercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -250,7 +235,7 @@
 	<div class="game-box p-2" id="characterMatching">
 		<h3>Character Matching</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -262,7 +247,7 @@
 	<div class="game-box p-2" id="dontTalkAboutTheThing">
 		<h3>Don't Talk about the Thing</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -274,7 +259,7 @@
 	<div class="game-box p-2" id="mindMeld">
 		<h3>Mind Meld</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -286,7 +271,7 @@
 	<div class="game-box p-2" id="typewriter">
 		<h3>Typewriter</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
