--- a/pages/template.html
+++ b/pages/template.html
@@ -44,3 +44,36 @@
   </footer>
 </body>
 </html>
+
+
+<p><strong>Description:</strong><br>
+  <ul>
+    <li>Several improvisers from a back line.</li>
+    <li>One player steps forward, they will be the chameleon.</li>
+    <li>One at a time players step off the back line to initiate a short scene with the chameleon.</li>
+    <li>They should enter with a strong character choice.</li>
+    <li>The chamelon has to match their character choice and the two do a peas in a pod scene.</li>
+    <li>After a few shorts scenes, a new player from the back line become the chameleon.</li>
+  </ul><hr>
+  <p><strong>Tips:</strong>
+    <ul>
+      <li>Don't start a scene with an initiation that makes it difficult for the chameleon to match your character.</li>
+    </ul><hr>
+  <p><strong>Source:</strong><br>
+    <ul>
+      <li>The Upright Citizens Brigade Comedy Improv Manual(second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li>
+    </ul><hr>
+
+<p><strong>Description:</strong><br>
+  <ul>
+    <li>Description...</li>
+  </ul><hr>
+  <p><strong>Example:</strong><br>
+    <ul>
+      <li>Example...</li>
+    </ul><hr>
+  <p><strong>Tips:</strong>
+    <ul>
+      <li>TipOne...</li>
+      <li>TipTwo...</li>
+    </ul><hr>
