--- a/pages/gibberish.html
+++ b/pages/gibberish.html
@@ -31,7 +31,7 @@
 	<div class="game-box p-2" id="chainMurder">
 		<h3>Chain Murder</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
