--- a/pages/group.html
+++ b/pages/group.html
@@ -22,9 +22,6 @@
 					<h5><a href="#adGame">Ad Game</a></h5>
 				</li>
 				<li>
-					<h5><a href="#band">Band</a></h5>
-				</li>
-				<li>
 					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
 				</li>
 				<li>
@@ -43,20 +40,8 @@
 	<div class="game-box p-2" id="adGame">
 		<h3>Ad Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BAND ---------- -->
-	<div class="game-box p-2" id="band">
-		<h3>Band</h3>
-		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -67,7 +52,7 @@
 	<div class="game-box p-2" id="bardsBallad">
 		<h3>Bard's Ballad</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -79,7 +64,7 @@
 	<div class="game-box p-2" id="blues">
 		<h3>Blues</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -91,7 +76,7 @@
 	<div class="game-box p-2" id="bubsyBerkeley">
 		<h3>Bubsy Berkeley</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
