--- a/pages/party.html
+++ b/pages/party.html
@@ -25,9 +25,6 @@
 					<h5><a href="#badRap">Bad Rap</a></h5>
 				</li>
 				<li>
-					<h5><a href="#band">Band</a></h5>
-				</li>
-				<li>
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
 				</li>
 				<li>
@@ -46,7 +43,7 @@
 	<div class="game-box p-2" id="alienTigerCow">
 		<h3>Alien Tiger Cow</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -58,20 +55,8 @@
 	<div class="game-box p-2" id="badRap">
 		<h3>Bad Rap</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BAND ---------- -->
-	<div class="game-box p-2" id="band">
-		<h3>Band</h3>
-		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -82,7 +67,7 @@
 	<div class="game-box p-2" id="beastieBoys">
 		<h3>Beastie Boys</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -94,7 +79,7 @@
 	<div class="game-box p-2" id="bunnyBunny">
 		<h3>Bunny Bunny</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -106,7 +91,7 @@
 	<div class="game-box p-2" id="mindMeld">
 		<h3>Mind Meld</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
