--- a/pages/scene.html
+++ b/pages/scene.html
@@ -64,7 +64,7 @@
 	<div class="game-box p-2" id="adGame">
 		<h3>Ad Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -76,7 +76,7 @@
 	<div class="game-box p-2" id="alphabetGame">
 		<h3>Alphabet Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -100,7 +100,7 @@
 	<div class="game-box p-2" id="dontTalkAboutTheThing">
 		<h3>Don't Talk about the Thing</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -112,7 +112,7 @@
 	<div class="game-box p-2" id="pillars">
 		<h3>Pillars</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -124,7 +124,7 @@
 	<div class="game-box p-2" id="sentenceGame">
 		<h3>Sentence Game</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentence.html">Sentence</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -136,7 +136,7 @@
 	<div class="game-box p-2" id="typewriter">
 		<h3>Typewriter</h3>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Description...</li></ul><hr><p><strong>Example:</strong><br><ul><li>Example...</li></ul><hr><p><strong>Tips:</strong><ul><li>TipOne...</li><br><li>TipTwo...</li></ul><hr>		<h6>Tags</h6>
+description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
