added more games

--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -28,9 +28,6 @@
 					<h5><a href="#adGame">Ad Game</a></h5>
 				</li>
 				<li>
-					<h5><a href="#acapellaHarmonies">Acapella Harmonies</a></h5>
-				</li>
-				<li>
 					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
 				</li>
 				<li>
@@ -43,13 +40,7 @@
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
 				</li>
 				<li>
-					<h5><a href="#beastieRap">Beastie Rap</a></h5>
-				</li>
-				<li>
 					<h5><a href="#bigBooty">Big Booty</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
 				</li>
 				<li>
 					<h5><a href="#chameleon">Chameleon</a></h5>
@@ -111,18 +102,6 @@ description		<h6>Tags</h6>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- ACAPELLA HARMONIES ---------- -->
-	<div class="game-box p-2" id="acapellaHarmonies">
-		<h3>Acapella Harmonies</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- ALIEN TIGER COW ---------- -->
 	<div class="game-box p-2" id="alienTigerCow">
 		<h3>Alien Tiger Cow</h3>
@@ -171,36 +150,12 @@ description		<h6>Tags</h6>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- BEASTIE RAP ---------- -->
-	<div class="game-box p-2" id="beastieRap">
-		<h3>Beastie Rap</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- BIG BOOTY ---------- -->
 	<div class="game-box p-2" id="bigBooty">
 		<h3>Big Booty</h3>
 		<hr>
 description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BUBSY BERKELEY ---------- -->
-	<div class="game-box p-2" id="bubsyBerkeley">
-		<h3>Bubsy Berkeley</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -280,7 +235,7 @@ description		<h6>Tags</h6>
 	<hr class="thick-hr">
 
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
