--- a/pages/performance.html
+++ b/pages/performance.html
@@ -37,12 +37,6 @@
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
 				</li>
 				<li>
-					<h5><a href="#blues">Blues</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
-				</li>
-				<li>
 					<h5><a href="#chainMurder">Chain Murder</a></h5>
 				</li>
 				<li>
@@ -141,35 +135,11 @@ description		<h6>Tags</h6>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- BLUES ---------- -->
-	<div class="game-box p-2" id="blues">
-		<h3>Blues</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BUBSY BERKELEY ---------- -->
-	<div class="game-box p-2" id="bubsyBerkeley">
-		<h3>Bubsy Berkeley</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- CHAIN MURDER ---------- -->
 	<div class="game-box p-2" id="chainMurder">
 		<h3>Chain Murder</h3>
 		<hr>
-description		<h6>Tags</h6>
+<p><strong>Description:</strong><br><ul><li>This is a game for 4+ players where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li><li>All but one players leaves the room and the remaining player and/or host get three suggestions.</li><li>The suggestions are for an occupation, weapon, and location.</li><li>The scene starts when the starting player mimes killing an improviser from the backline with the murder weapon. The murdered player should lay on the floor and become a dead body.</li><li>Teach the audience to shout a phrase like, Oh no! There's been a murder!, each time a murder happens to summon in the next player.</li><li>Each player who enters the scene will assume the standing player has murdered the dead person or persons on the floor and accuse them(using only gibberish mind you).</li><li>The standing player then mimes the three suggestions in order.</li><li>The guessing player should give some indication that they think they know what the suggestion is before the miming player moves on to the next one.</li><li>Once the guessing player understands all three suggestions they then mime killing the other player with what they think is the murder weapon.</li><li>This cycle continues until all players have had their turn.</li><li>At the end we call scene and the host goes down the line and each improviser says what they think the suggestions were.</li><li>Instruct the audience to clap or make a buzzer sound based on if the improviser is correct or not.</li></ul><hr><p><strong>Tips:</strong><ul><li>Use the acronym O.W.L. to remember the order of the suggestions being acted out.</li><li>Really play up the gibberish and be expressive. The scene gets awkward if the players are too quiet or not animated enough.</li><li>The guessers should make the miming player spend too much time on each suggestion, as soon as you think you have an idea of what they might be doing give them the go ahead to switch to the next suggestion. We don't want the scene to go on too long and it's funnier if the suggestions get lost along the way than if they stay the same the whole time.</li></ul><hr>		<h6>Tags</h6>
 		<a href="gibberis.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
@@ -250,7 +220,7 @@ description		<h6>Tags</h6>
 	<hr class="thick-hr">
 
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
