--- a/pages/group.html
+++ b/pages/group.html
@@ -24,12 +24,6 @@
 				<li>
 					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
 				</li>
-				<li>
-					<h5><a href="#blues">Blues</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bubsyBerkeley">Bubsy Berkeley</a></h5>
-				</li>
 			</ul>
 		</div>
 
@@ -60,32 +54,8 @@ description		<h6>Tags</h6>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- BLUES ---------- -->
-	<div class="game-box p-2" id="blues">
-		<h3>Blues</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - <a href="song_formats.html">Song Format</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BUBSY BERKELEY ---------- -->
-	<div class="game-box p-2" id="bubsyBerkeley">
-		<h3>Bubsy Berkeley</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="energy.html">Energy</a> - <a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="performance.html">Performance</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
