--- a/pages/listening.html
+++ b/pages/listening.html
@@ -31,9 +31,6 @@
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
 				</li>
 				<li>
-					<h5><a href="#beastieRap">Beastie Rap</a></h5>
-				</li>
-				<li>
 					<h5><a href="#bigBooty">Big Booty</a></h5>
 				</li>
 				<li>
@@ -99,18 +96,6 @@ description		<h6>Tags</h6>
 		<hr>
 description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BEASTIE RAP ---------- -->
-	<div class="game-box p-2" id="beastieRap">
-		<h3>Beastie Rap</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -190,7 +175,7 @@ description		<h6>Tags</h6>
 	<hr class="thick-hr">
 
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
