--- a/pages/song_formats.html
+++ b/pages/song_formats.html
@@ -25,7 +25,7 @@
 
 <div class="m-5">
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
