--- a/pages/torture.html
+++ b/pages/torture.html
@@ -40,7 +40,7 @@
 	<hr class="thick-hr">
 
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
