--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -19,16 +19,10 @@
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
-					<h5><a href="#acapellaHarmonies">Acapella Harmonies</a></h5>
-				</li>
-				<li>
 					<h5><a href="#badRap">Bad Rap</a></h5>
 				</li>
 				<li>
 					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
-				</li>
-				<li>
-					<h5><a href="#beastieRap">Beastie Rap</a></h5>
 				</li>
 				<li>
 					<h5><a href="#bigBooty">Big Booty</a></h5>
@@ -48,18 +42,6 @@
 <hr class="thick-hr">
 
 <div class="m-5">
-	<!-- ---------- ACAPELLA HARMONIES ---------- -->
-	<div class="game-box p-2" id="acapellaHarmonies">
-		<h3>Acapella Harmonies</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
 	<!-- ---------- BAD RAP ---------- -->
 	<div class="game-box p-2" id="badRap">
 		<h3>Bad Rap</h3>
@@ -78,18 +60,6 @@ description		<h6>Tags</h6>
 		<hr>
 description		<h6>Tags</h6>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BEASTIE RAP ---------- -->
-	<div class="game-box p-2" id="beastieRap">
-		<h3>Beastie Rap</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
@@ -145,7 +115,7 @@ description		<h6>Tags</h6>
 	<hr class="thick-hr">
 
 </div>
-<p class="white">built</p></body>
+</body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
 		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
