Wrote new builder for all pages
- Currently bugged

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -20,6 +20,7 @@
       <h5><a href="audience_participation.html">Audience Participation</a></h5>
       <h5><a href="character.html">Character</a></h5>
       <h5><a href="child_friendly.html">Child Friendly</a></h5>
+      <h5><a href="energy.html">Energy</a></h5>
       <h5><a href="exercises.html">Exercises</a></h5>
       <h5><a href="gibberish.html">Gibberish</a></h5>
       <h5><a href="group.html">Group Games</a></h5>
