--- a/pages/listening.html
+++ b/pages/listening.html
@@ -155,7 +155,7 @@ description		<h6>Tags</h6>
 		<h3>Sentence Game</h3>
 		<hr>
 description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentence.html">Sentence</a> - 
+		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
