--- a/pages/energy.html
+++ b/pages/energy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Justification</title>
+	<title>Energy</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../styles/style.css">
 </head>
@@ -14,12 +14,12 @@
 	</div>
 </header>
 <body>
-	<h1 class="text-center my-3">Justification</h1>
-	<p class="text-center my-3">These games and exercises make players have to justify absurd choices or dialogue.</p>
+	<h1 class="text-center my-3">Energy</h1>
+	<p class="text-center my-3">These games and exercises get the blood pumping!</p>
 		<div class="m-5 games-list">
 			<ul class="py-3">
 				<li>
-					<h5><a href="#sentenceGame">Sentence Game</a></h5>
+					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
 				</li>
 			</ul>
 		</div>
@@ -27,12 +27,12 @@
 <hr class="thick-hr">
 
 <div class="m-5">
-	<!-- ---------- SENTENCE GAME ---------- -->
-	<div class="game-box p-2" id="sentenceGame">
-		<h3>Sentence Game</h3>
+	<!-- ---------- BUNNY BUNNY ---------- -->
+	<div class="game-box p-2" id="bunnyBunny">
+		<h3>Bunny Bunny</h3>
 		<hr>
 description		<h6>Tags</h6>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="sentences.html">Sentences</a> - 
+		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h6><a href="#top">Back to Top</a></h6>
 	</div>
